# new-adpt

./: .gitignore  README.md  adpt-linear.html  docker-compose.yml  website-draft
backend/: .env.example  pyproject.toml  render.yaml
backend/app/: __init__.py  auth.py  db.py  jobs.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  analysis.py  profile.py  public.py  sources.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  analysis.py  github.py  leetcode.py  refresh_policy.py  scoring.py
backend/tests/: test_scoring.py
frontend/: .env.example  auth.ts  next.config.ts  package-lock.json  package.json
frontend/app/: actions.ts  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/app/dashboard/analysis/: loading.tsx  page.tsx
frontend/app/dashboard/sources/: loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/github/: loading.tsx  page.tsx
frontend/app/onboarding/leetcode/: loading.tsx  page.tsx
frontend/app/onboarding/profile/: loading.tsx  page.tsx
frontend/app/signup/: page.tsx
frontend/app/u/[slug]/: page.tsx
frontend/components/: AppHeader.tsx  GitHubSignInButton.tsx  LoadingTips.tsx  PendingButton.tsx
frontend/lib/: backend.ts  types.ts
frontend/types/: next-auth.d.ts
